# DeHet

./: .gitignore  README.md  app.py  requirements.txt
backend/: CalendarAnalyzer.py  README.md  calendar_analyzer.py  custom_calendar.py  event.py  freeevent.py  overlap_finder.py  planner.py  ranker.py  read.py  requirements.txt  setup.cfg
backend/src/: main.py
backend/src/models/: calendar_combiner.py  custom_calendar.py  custom_time.py  event.py  overlap_finder.py  ranker.py
backend/src/tests/: test_custom_calendar.py  test_planner.py
backend/tests/: test_planner.py
docs/: ARCHITECTURE.md  BACKEND_STANDARDS.md  FRONTEND_STANDARDS.md  GETTING_STARTED.md
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/common/FileUpload/: FileUpload.jsx  styles.js
frontend/src/components/common/OutputBox/: OutputBox.jsx  styles.js
frontend/src/configs/: app.config.js
frontend/src/hooks/: useFileUpload.js
frontend/src/layouts/MainLayout/: MainLayout.jsx  styles.js
frontend/src/pages/: HomePage.jsx
frontend/src/styles/: muiTheme.js  theme.js  ui.js
frontend/src/utils/: fileUtils.js
ics/: sacha@wearebit.com.ics
templates/: index.html  page.html
