[metadata]
name = dehet
version = 0.1.0
description = 
author = DerkNiessink
author_email = derk@niessink.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11

[options.packages.find]
where = src